WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137617
Various arguments optimisations in codegen fail to account for arguments being in lexical record
https://bugs.webkit.org/show_bug.cgi?id=137617
Summary
Various arguments optimisations in codegen fail to account for arguments bein...
Oliver Hunt
Reported
2014-10-10 10:54:45 PDT
Various arguments optimisations in codegen fail to account for arguments being in lexical record
Attachments
Patch
(21.31 KB, patch)
2014-10-10 10:57 PDT
,
Oliver Hunt
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2014-10-10 10:57:25 PDT
Created
attachment 239637
[details]
Patch
Michael Saboff
Comment 2
2014-10-10 11:26:46 PDT
Comment on
attachment 239637
[details]
Patch r=me
Oliver Hunt
Comment 3
2014-10-10 12:03:35 PDT
Committed
r174606
: <
http://trac.webkit.org/changeset/174606
>
Andy Estes
Comment 4
2014-10-10 12:50:18 PDT
(In reply to
comment #3
)
> Committed
r174606
: <
http://trac.webkit.org/changeset/174606
>
This change caused a JSC test failure:
https://build.webkit.org/builders/Apple%20Mavericks%20Release%20WK1%20%28Tests%29/builds/9172/steps/jscore-test/logs/stdio
WebKit Commit Bot
Comment 5
2014-10-10 12:55:10 PDT
Re-opened since this is blocked by
bug 137621
Oliver Hunt
Comment 6
2014-10-17 09:07:11 PDT
Committed
r174821
: <
http://trac.webkit.org/changeset/174821
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug