Source/JavaScriptCore/bytecompiler/BytecodeGenerator.h
@@ -277,7 +277,9 @@ namespace JSC {
         void setIsNumericCompareFunction(bool isNumericCompareFunction);
 
         bool willResolveToArguments(const Identifier&);
-        RegisterID* uncheckedRegisterForArguments();
+
+        bool hasSafeLocalArgumentsRegister() { return m_localArgumentsRegister; }
+        RegisterID* uncheckedLocalArgumentsRegister();
 
         bool isCaptured(int operand);
         CaptureMode captureMode(int operand) { return isCaptured(operand) ? IsCaptured : NotCaptured; }
@@ -752,6 +754,8 @@ namespace JSC {
         RegisterID* m_lexicalEnvironmentRegister;
         RegisterID* m_emptyValueRegister;
         RegisterID* m_globalObjectRegister;
+        RegisterID* m_localArgumentsRegister;
+
         Vector<Identifier, 16> m_watchableVariables;
         SegmentedVector<RegisterID, 32> m_constantPoolRegisters;
         SegmentedVector<RegisterID, 32> m_calleeRegisters;
